# job_exchange

./: .dockerignore  .gitignore  .test-env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_07_11_1618-0f6fb4fb0baa_create_plase_table.py  2024_07_12_1401-99f698b5d263_create_action_type_table.py  2024_07_12_1642-6b5148553e67_job_user_attribute_tables_created_.py  2024_07_12_1642-b48ef407144f_renamed_place_and_action_type_places_id_.py  2024_07_13_1053-288692f7d383_job_user_attribute_tables_created_.py  2024_07_15_1121-23d58edce0fa_job_model_added_fields_created_at_and_.py  2024_07_15_1206-e14351627a04_job_model_modified.py  2024_07_15_1355-7fda3cde2621_assosiated_tables_updated.py  2024_07_18_1041-c41085c5803b_created_table_job_providers.py  2024_07_18_1114-ba63dfb0f408_job_table_modified.py  2024_07_18_1325-e813432586f3_job_table_modified.py  2024_07_22_1340-3e0cfbe4a0d7_notifications_table_created.py  2024_07_23_0922-ebc72e5e4b98_the_user_and_job_tables_are_.py  2024_07_24_1450-1980e6cf9a0f_create_tables_job_types_job_status.py  2024_07_24_1505-9992a4e63b8b_job_table_modified.py  2024_07_24_1609-61f714575ba2_job_table_modified.py  2024_07_25_1549-d352af3bd3d8_create_transaction_table.py  2024_07_26_1032-192ca3ab8410_create_index.py  2024_07_29_1026-63f36a90c868_job_table_modified.py  2024_07_29_2107-0ed5129afa45_job_table_modified.py  2024_07_29_2114-7928962fd780_job_table_modified.py  2024_07_29_2115-d4f28b6e0a95_remove_tables_job_status_and_job_type.py  2024_07_31_1513-2f703af97866_create_cascade_delete_in_user_job_.py  2024_09_15_2207-ed4fd78775d6_create_table_user_data.py  2024_09_15_2256-031608d4869a_update_user_table.py  2024_09_16_0931-b92e8cdb2979_modify_notifications_table.py  2024_09_17_0845-cd4a42e20224_update_user_table.py  2024_09_18_2149-7569bcb36ca4_create_table_userrating.py  2024_09_26_1036-acd74708b5d5_add_default_attributes.py  (+2 more)
src/: config.py  database.py  depends.py  main.py
tests/: conftest.py  test_place.py
(+106 files in other folders)
