[tool.poetry]
name = "job exchange"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.111.0"

uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
".", "src",
]